--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="./admin.html">admin</a>
+        <a href="/unbundlAssignment/admin.html">admin</a>
     </div>
     <div class="container">
         <aside class="filter-form">
