--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="./index.html">Home</a>
+        <a href="/unbundlAssignment">Home</a>
     </div>
     <section class="admin container">
         <h1>Admin Panel</h1>
